implemented basic plugin

--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,26 @@
   <groupId>app.cleancode</groupId>
   <artifactId>strong-wood-plugin</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+  <java.version>15</java.version>
+  <maven.compiler.target>${java.version}</maven.compiler.target>
+  <maven.compiler.source>${java.version}</maven.compiler.source>
+  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
+	<repositories>
+		<repository>
+			<id>spigot-repo</id>
+			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+		</repository>
+	</repositories>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>spigot-api</artifactId>
+			<version>1.16.5-R0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
 </project>
